fix: topics heading gap

--- a/course-v3/assets/css/course-info.scss
+++ b/course-v3/assets/css/course-info.scss
@@ -1,9 +1,6 @@
 $panel-course-info-text-color: #464646;
 
 .course-info {
-  .course-info-content {
-    margin-top: 5px;
-  }
   h5 {
     font-size: 1rem !important;
     text-transform: capitalize;
